*SVN*

* Document deep eager includes.  #6267 [Josh Susser, Dan Manges]

* Document warning that associations names shouldn't be reserved words.  #4378 [murphy@cYcnus.de, Josh Susser]

* Sanitize Base#inspect.  #8392 [Nik Wakelin]

* Replace the transaction {|transaction|..} semantics with a new Exception ActiveRecord::Rollback.   [Koz]

* Oracle: extract column length for CHAR also.  #7866 [ymendel]

* Document :allow_nil option for validates_acceptance_of since it defaults to true. [tzaharia]

* Update documentation for :dependent declaration so that it explicitly uses the non-deprecated API. [danger]

* Add documentation caveat about when to use count_by_sql. [fearoffish]

* Enhance documentation for increment_counter and decrement_counter. [fearoffish]

* Provide brief introduction to what optimistic locking is. [fearoffish]

* Add documentation for :encoding option to mysql adapter. [marclove]

* Added short-hand declaration style to migrations (inspiration from Sexy Migrations, http://errtheblog.com/post/2381) [DHH]. Example:

    create_table "products" do |t|
      t.column "shop_id",    :integer
      t.column "creator_id", :integer
      t.column "name",       :string,   :default => "Untitled"
      t.column "value",      :string,   :default => "Untitled"
      t.column "created_at", :datetime
      t.column "updated_at", :datetime
    end
  
  ...can now be written as:
  
    create_table :products do |t|
      t.integer :shop_id, :creator_id
      t.string  :name, :value, :default => "Untitled"
      t.timestamps
    end

* Use association name for the wrapper element when using .to_xml.  Previous behavior lead to non-deterministic situations with STI and polymorphic associations. [Koz, jstrachan]

* Improve performance of calling .create on has_many :through associations. [evan]

* Improved cloning performance by relying less on exception raising #8159 [Blaine]
