@@ -1,5 +1,7 @@
 *SVN*
 
+* Fix column type detection while loading fixtures.  Closes #7987 [roderickvd]
+
 * Document deep eager includes.  #6267 [Josh Susser, Dan Manges]
 
 * Document warning that associations names shouldn't be reserved words.  #4378 [murphy@cYcnus.de, Josh Susser]
